--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="css/style.css" rel="stylesheet" media="screen">
     <link href="css/print.css" rel="stylesheet" media="print">
 
-    <script>
+    <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
@@ -20,8 +20,8 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js">async</script>
-    <script async src="js/perfmatters.js">async</script>
+    <script src="http://www.google-analytics.com/analytics.js"async></script>
+    <script async src="js/perfmatters.js"async></script>
   </head>
   <body>
     <header>
