--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" media="screen">
     <link href="css/print.css" rel="stylesheet" media="print">
     <script src="js/analytics.js" async></script>
-    </script>
     <script src="http://www.google-analytics.com/analytics.js" async>
     </script>
     <script src="js/perfmatters.js" async></script>
@@ -49,7 +48,7 @@
           </li>
 
           <li>
-            <img class="pizza" src="views/images/pizzeria.jpg">
+            <img class"pizza" src="views/images/pizzeria.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
