--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </li>
 
           <li>
-            <img class"pizza" src="views/images/pizzeria.jpg">
+            <img src="views/images/pizzeria.jpg" class="pizza"/>
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
