--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" media="screen">
     <link href="css/print.css" rel="stylesheet" media="print">
     <script src="js/analytics.js" async></script>
     <script src="http://www.google-analytics.com/analytics.js" async>
@@ -48,7 +48,7 @@
           </li>
 
           <li>
-            <img src="views/images/pizzeria.jpg" class="pizza"/>
+            <img class"pizza" src="views/images/pizzeria.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
@@ -61,4 +61,3 @@
     </div>
   </body>
 </html>
-<link href="css/small.css" rel="stylesheet">
