--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet" media="screen">
+    <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
     <script src="js/analytics.js" async></script>
     <script src="http://www.google-analytics.com/analytics.js" async>
@@ -48,7 +47,7 @@
           </li>
 
           <li>
-            <img class"pizza" src="views/images/pizzeria.jpg">
+            <img src="views/images/pizzeria.jpg" class="pizza"/>
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
@@ -61,3 +60,5 @@
     </div>
   </body>
 </html>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+	<link href="css/small.css" rel="stylesheet">
